<resources>
    <string name="app_name">CoronaSocialNetwork</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="retype_password_hint">Retype password</string>
    <string name="user_name_hint">User Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="register">Register</string>
    <string name="sign_up_now">Don\'t have an account? Sign Up now!</string>
    <string name="post_hint">Hey man, what ya doing?</string>
</resources>
